--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^2.7.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@faker-js/faker": "^8.0.2",
     "@hookform/resolvers": "^3.1.0",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
@@ -27,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-query": "^3.39.3",
     "typescript": "5.0.4",
     "yup": "^1.2.0"
   },
